Fixed spacing of tracks

--- a/music-blender/src/App.css
+++ b/music-blender/src/App.css
@@ -15,6 +15,27 @@
   color: white;
 }
 
+#scenes{
+  display: flex;
+  border-style: solid;
+  border-color: #61dafb;
+  border-radius: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#tracklist {
+}
+
+#track {
+}
+
+iframe{
+  display:block;
+}
+
 .App-link {
   color: #61dafb;
 }
